updated cluster url

--- a/skeletons/catalog-info/catalog-info.yaml
+++ b/skeletons/catalog-info/catalog-info.yaml
@@ -46,7 +46,7 @@ metadata:
     - url: https://devspaces.apps.cluster-h6fh7.sandbox550.opentlc.com/#https://anattama@dev.azure.com/anattama/Developer%20Hub%20Demo/_git/${{ values.repoName }}
       title: OpenShift Dev Spaces (VS Code editor)
       icon: web
-    - url: https://${{ values.repoName }}-gateway-${{ values.repoName }}-dev.apps.cluster-h6fh7.sandbox550.opentlc.com/api/hello
+    - url: https://${{ values.repoName }}-${{ values.repoName }}-dev.apps.cluster-zj2wm.zj2wm.sandbox2740.opentlc.com/api/hello
       title: Deployed Application
       icon: web  
   tags:
